Revert "Changed .mydatatable max-width from 50px to 70px to fix problem of sorting arrows overlapping 'th' text when scaling page."
This reverts commit 79f36379e30db0ddeb656e5ea2105cf49ad452ba.

--- a/GPS.Service/wwwroot/css/site.css
+++ b/GPS.Service/wwwroot/css/site.css
@@ -98,5 +98,5 @@ body {
 
 /*Originally changed to fit table within container; somehow this change made the page scalable. */
 .mydatatable th {
-   max-width: 70px;
+   max-width: 50px;
 }
